--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@vaadin/checkbox": "24.0.0",
     "@vaadin/checkbox-group": "24.0.0",
     "@vaadin/combo-box": "24.0.0",
-    "@vaadin/common-frontend": "0.0.17",
+    "@vaadin/common-frontend": "0.0.18",
     "@vaadin/component-base": "24.0.0",
     "@vaadin/confirm-dialog": "24.0.0",
     "@vaadin/context-menu": "24.0.0",
@@ -53,7 +53,7 @@
     "@vaadin/progress-bar": "24.0.0",
     "@vaadin/radio-group": "24.0.0",
     "@vaadin/rich-text-editor": "24.0.0",
-    "@vaadin/router": "1.7.4",
+    "@vaadin/router": "1.7.5",
     "@vaadin/scroller": "24.0.0",
     "@vaadin/select": "24.0.0",
     "@vaadin/split-layout": "24.0.0",
@@ -73,7 +73,7 @@
     "@vaadin/virtual-list": "24.0.0",
     "construct-style-sheets-polyfill": "3.1.0",
     "date-fns": "2.29.3",
-    "lit": "2.6.1",
+    "lit": "2.7.6",
     "proj4": "2.8.1"
   },
   "devDependencies": {
@@ -85,12 +85,14 @@
     "rollup-plugin-brotli": "3.1.0",
     "strip-css-comments": "5.0.0",
     "transform-ast": "2.4.4",
-    "typescript": "4.9.3",
-    "vite": "4.1.3",
+    "typescript": "5.0.4",
+    "vite": "4.3.9",
     "vite-plugin-checker": "0.5.5",
-    "workbox-build": "6.5.4",
-    "workbox-core": "6.5.4",
-    "workbox-precaching": "6.5.4"
+    "workbox-build": "7.0.0",
+    "workbox-core": "7.0.0",
+    "workbox-precaching": "7.0.0",
+    "rollup-plugin-visualizer": "5.9.0",
+    "@vitejs/plugin-react": "4.0.0"
   },
   "vaadin": {
     "dependencies": {
@@ -106,7 +108,7 @@
       "@vaadin/checkbox": "24.0.0",
       "@vaadin/checkbox-group": "24.0.0",
       "@vaadin/combo-box": "24.0.0",
-      "@vaadin/common-frontend": "0.0.17",
+      "@vaadin/common-frontend": "0.0.18",
       "@vaadin/component-base": "24.0.0",
       "@vaadin/confirm-dialog": "24.0.0",
       "@vaadin/context-menu": "24.0.0",
@@ -145,7 +147,7 @@
       "@vaadin/progress-bar": "24.0.0",
       "@vaadin/radio-group": "24.0.0",
       "@vaadin/rich-text-editor": "24.0.0",
-      "@vaadin/router": "1.7.4",
+      "@vaadin/router": "1.7.5",
       "@vaadin/scroller": "24.0.0",
       "@vaadin/select": "24.0.0",
       "@vaadin/split-layout": "24.0.0",
@@ -165,7 +167,7 @@
       "@vaadin/virtual-list": "24.0.0",
       "construct-style-sheets-polyfill": "3.1.0",
       "date-fns": "2.29.3",
-      "lit": "2.6.1",
+      "lit": "2.7.6",
       "proj4": "2.8.1"
     },
     "devDependencies": {
@@ -177,12 +179,14 @@
       "rollup-plugin-brotli": "3.1.0",
       "strip-css-comments": "5.0.0",
       "transform-ast": "2.4.4",
-      "typescript": "4.9.3",
-      "vite": "4.1.3",
+      "typescript": "5.0.4",
+      "vite": "4.3.9",
       "vite-plugin-checker": "0.5.5",
-      "workbox-build": "6.5.4",
-      "workbox-core": "6.5.4",
-      "workbox-precaching": "6.5.4"
+      "workbox-build": "7.0.0",
+      "workbox-core": "7.0.0",
+      "workbox-precaching": "7.0.0",
+      "rollup-plugin-visualizer": "5.9.0",
+      "@vitejs/plugin-react": "4.0.0"
     },
     "hash": "6d22a7a18ac45a8f027a9d08e22dea880b735a66b4e97f1d4a2f5657119f4833"
   },
